<resources>
    <string name="app_name">ReminderApp</string>
    <string name="action_settings">Settings</string>

    <string name="main_activity_title">Reminders</string>
    <string name="settings_activity_title">Reminder Settings</string>

    <!-- add/edit -->
    <string name="title_hint">Remember to&#8230;</string>
    <string name="date_today">Today</string>
    <string name="date_tomorrow">Tomorrow</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel">Cancel</string>

    <!-- tabs -->
    <string name="tab_name_active">Active</string>
    <string name="tab_name_completed">Completed</string>

    <!-- menus -->
    <string name="menu_action_edit">Edit</string>
    <string name="menu_action_mark_incomplete">Mark incomplete</string>
    <string name="menu_action_delete">Delete</string>

    <string name="completed_on_label">Completed: %1$s</string>
    <string name="overdue_header">Overdue!</string>

    <!-- settings -->
    <string name="toggle_notifications_title">Daily Notifications</string>
    <string name="toggle_notifications_description">Toggle daily notifications. If there are unfinished notifications due soon, you will receive a notification at your chosen time of day.</string>
    <string name="notify_time_title">Notification Time</string>
    <string name="notify_time_description_default">When you will be notified each day of unfinished items.</string>
    <string name="notify_time_description">Send notification at %1$s</string>
    <string name="notify_overdue_title">Notify Overdue</string>
    <string name="notify_overdue_description">Always send notifications for overdue items.</string>
    <string name="notify_upcoming_title">Advance Notify</string>
    <string name="notify_upcoming_description">Notify me when I have items due in the next %1$s.</string>

    <string name="x_days">%1$d days</string>
    <string name="day">1 day</string>

    <string name="notification_title_overdue">You have overdue tasks!</string>
    <string name="notification_title_upcoming">You have %1$d upcoming tasks due soon.</string>

    <!--NON-TRANSLATABLE-->
    <string name="notification_pref_key" translatable="false">notification_pref_key</string>
    <string name="notify_time_pref_key" translatable="false">notify_time_pref_key</string>
    <string name="notify_upcoming_pref_key" translatable="false">notify_upcoming_pref_key</string>
    <string name="notify_overdue_pref_key" translatable="false">notify_overdue_pref_key</string>
</resources>
